--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "time.h": "c",
         "Practice6_1.C": "cpp",
         "2_2_2.C": "cpp",
-        "3_2_5.C": "cpp"
+        "3_2_5.C": "cpp",
+        "typeinfo": "c"
     }
 }
