--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Practice6_1.C": "cpp",
         "2_2_2.C": "cpp",
         "3_2_5.C": "cpp",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "2_3_1.C": "cpp"
     }
 }
